# mindcare-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml
data/: conseils_emotions.csv
data/source/: psychology_guide.txt
models/: LogisticRegression.pkl  tfidf_vectorizer.pkl
notebooks/: 1_analysis_EDA_features.ipynb  2_model_training.ipynb  3_RAG_Knowledge_Builder.ipynb  4_FineTuning_Preparation.ipynb  5_Qualitative_Benchmark.ipynb  6_GreenAI_Impact.ipynb
src/: __init__.py  agent.py  analysis.py  carbon.py  config.py  strategist.py  tools.py
src/tools/: __init__.py  advisor.py  classifier.py  geolocation.py  rag.py
